--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
           <li>item 1</li>
           <li>item 2</li>
           <li>item 3</li>
-          <li>item 4</li>
-          <li>item 5</li>
       </ul>
 
     </module-one>
+
+    <module-two>
+        <div>My owesome new stuff</div>
+    </module-two>
 </body>
 </html>>
