--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li>item 3</li>
           <li>item 4</li>
           <li>item 5</li>
+          <li>Item for master</li>
       </ul>
 
     </module-one>
